--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.3.1",
+    "node-fetch": "^2.6.0",
     "node-schedule": "^1.3.2"
   },
   "devDependencies": {
